--- a/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
+++ b/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="i3C-ql-rzz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -150,22 +150,24 @@
                         <segue destination="NYj-Z4-dJt" kind="relationship" relationship="viewControllers" id="aPH-Sl-6T2"/>
                         <segue destination="IQN-PV-Frw" kind="relationship" relationship="viewControllers" id="fRa-XE-ZEP"/>
                         <segue destination="Stm-lh-B9Z" kind="relationship" relationship="viewControllers" id="qH0-v1-z7U"/>
+                        <segue destination="i3C-ql-rzz" kind="relationship" relationship="viewControllers" id="Umv-Nb-mgn"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rLL-UA-qyJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1557" y="-1290"/>
         </scene>
-        <!--View Controller2-->
+        <!--LikesButton-->
         <scene sceneID="6aY-uj-F9U">
             <objects>
                 <viewController id="i3C-ql-rzz" customClass="ViewController2" customModule="less_1_IOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vkl-Ih-qNC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="ZE9-3i-vkx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="LikesButton" id="Aof-45-kBP"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jy1-j4-dJl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
