--- a/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
+++ b/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ndz-c3-E7R">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -204,6 +204,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lel-qr-ADj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1236" y="846"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="MQO-DX-qTl">
+            <objects>
+                <viewController id="yAc-tE-k8s" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="XB0-1q-dYd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c9o-Mi-XWk">
+                                <rect key="frame" x="59" y="203" width="300" height="482"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DfH-ci-bK0">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="482"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="DfH-ci-bK0" secondAttribute="bottom" id="XzV-1v-bAL"/>
+                                    <constraint firstItem="DfH-ci-bK0" firstAttribute="leading" secondItem="c9o-Mi-XWk" secondAttribute="leading" id="djB-Ub-VN0"/>
+                                    <constraint firstItem="DfH-ci-bK0" firstAttribute="top" secondItem="c9o-Mi-XWk" secondAttribute="top" id="eQS-mr-o1d"/>
+                                    <constraint firstAttribute="width" constant="300" id="fWe-oI-MSe"/>
+                                    <constraint firstAttribute="trailing" secondItem="DfH-ci-bK0" secondAttribute="trailing" id="pnC-Xi-VYm"/>
+                                    <constraint firstAttribute="height" constant="500" id="zVV-fY-TNG"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7Dy-2U-BoZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="c9o-Mi-XWk" firstAttribute="leading" secondItem="7Dy-2U-BoZ" secondAttribute="leading" constant="59" id="93z-tI-7mA"/>
+                            <constraint firstItem="7Dy-2U-BoZ" firstAttribute="trailing" secondItem="c9o-Mi-XWk" secondAttribute="trailing" constant="59" id="eVf-02-50F"/>
+                            <constraint firstItem="7Dy-2U-BoZ" firstAttribute="bottom" secondItem="c9o-Mi-XWk" secondAttribute="bottom" constant="177" id="vg0-Kf-cFw"/>
+                            <constraint firstItem="c9o-Mi-XWk" firstAttribute="top" secondItem="7Dy-2U-BoZ" secondAttribute="top" constant="159" id="ycN-dI-99N"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zkB-4D-Hri" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2878.2608695652175" y="861.83035714285711"/>
         </scene>
         <!--Photos Collection View Controller-->
         <scene sceneID="eE5-Rc-gYu">
