--- a/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
+++ b/Ios_course_less1/less_1_IOS/less_1_IOS/Base.lproj/Main.storyboard
@@ -216,17 +216,14 @@
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c9o-Mi-XWk">
                                 <rect key="frame" x="59" y="203" width="300" height="482"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DfH-ci-bK0">
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DfH-ci-bK0">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="500"/>
                                         <color key="backgroundColor" systemColor="systemGray4Color"/>
                                         <color key="tintColor" systemColor="systemPinkColor"/>
                                         <gestureRecognizers/>
-                                        <connections>
-                                            <outletCollection property="gestureRecognizers" destination="rrQ-bw-wZe" appends="YES" id="Cxs-J9-tDy"/>
-                                        </connections>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="8kH-hO-UeH"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="500" id="F5k-Ls-yuf"/>
@@ -241,12 +238,17 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7Dy-2U-BoZ"/>
                         <color key="backgroundColor" systemColor="systemGray4Color"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="c9o-Mi-XWk" firstAttribute="leading" secondItem="7Dy-2U-BoZ" secondAttribute="leading" constant="59" id="93z-tI-7mA"/>
                             <constraint firstItem="7Dy-2U-BoZ" firstAttribute="trailing" secondItem="c9o-Mi-XWk" secondAttribute="trailing" constant="59" id="eVf-02-50F"/>
                             <constraint firstItem="7Dy-2U-BoZ" firstAttribute="bottom" secondItem="c9o-Mi-XWk" secondAttribute="bottom" constant="177" id="vg0-Kf-cFw"/>
                             <constraint firstItem="c9o-Mi-XWk" firstAttribute="top" secondItem="7Dy-2U-BoZ" secondAttribute="top" constant="159" id="ycN-dI-99N"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Ops-Qt-mGA" appends="YES" id="TUu-S2-jb6"/>
+                            <outletCollection property="gestureRecognizers" destination="R8K-o9-hgd" appends="YES" id="9QP-KZ-ll5"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="galleryImageView" destination="DfH-ci-bK0" id="zZC-MB-Qgb"/>
@@ -254,9 +256,14 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zkB-4D-Hri" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <swipeGestureRecognizer direction="right" id="rrQ-bw-wZe">
+                <swipeGestureRecognizer direction="right" id="Ops-Qt-mGA">
                     <connections>
-                        <action selector="moveToNextItem:" destination="yAc-tE-k8s" id="bAh-ou-Cmo"/>
+                        <action selector="moveToNextItem:" destination="yAc-tE-k8s" id="fwf-JH-msQ"/>
+                    </connections>
+                </swipeGestureRecognizer>
+                <swipeGestureRecognizer direction="left" id="R8K-o9-hgd">
+                    <connections>
+                        <action selector="moveToNextItem:" destination="yAc-tE-k8s" id="sTP-KK-9yB"/>
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
